--- a/index.html
+++ b/index.html
@@ -186,16 +186,16 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark><br>
-		<mark>Запись вещания:</mark>
+		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark><br>
+		<mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/1141c545005f5bc8aab5880f3204777c/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/d03c50fd33a46d6b4c4956642cd087fa/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </div>
 <div class="title1">
 		<b>Расписание на 13.08.2024</b>
-        <p>С 11:30 МСК:</p>
+        <p>С 12:00 МСК:</p>
         <p>- Фильм "Чудеса случаются" <mark>НОВОЕ</mark></p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
@@ -205,13 +205,13 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее" <mark>НОВОЕ</mark></p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:37 МСК:</p>
+        <p>14:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>14:00 МСК:</p>
+        <p>14:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
         <!-- <p>19:07 МСК:</p>
         <p>Главное к этой минуте</p> -->
-        <p>14:25 МСК:</p>
+        <p>14:55 МСК:</p>
         <p>Продолжение вещания</p>
         <!-- <p>20:35 МСК:</p>
         <p>Итоги недели</p> -->
