--- a/livetv.html
+++ b/livetv.html
@@ -185,14 +185,14 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <mark>Интернет-канал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="720" height="405" src="https://rutube.ru/play/embed/1141c545005f5bc8aab5880f3204777c/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="720" height="405" src="https://rutube.ru/play/embed/d03c50fd33a46d6b4c4956642cd087fa/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
         <b>Расписание на 13.08.2024</b>
-        <p>С 11:30 МСК:</p>
+        <p>С 12:00 МСК:</p>
         <p>- Фильм "Чудеса случаются" <mark>НОВОЕ</mark></p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
@@ -202,13 +202,13 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее" <mark>НОВОЕ</mark></p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:37 МСК:</p>
+        <p>14:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>14:00 МСК:</p>
+        <p>14:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
         <!-- <p>19:07 МСК:</p>
         <p>Главное к этой минуте</p> -->
-        <p>14:25 МСК:</p>
+        <p>14:55 МСК:</p>
         <p>Продолжение вещания</p>
         <!-- <p>20:35 МСК:</p>
         <p>Итоги недели</p> -->
