--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ if (cookiecook != "no") {
 			<div id="myDropdown" class="dropdown-content">
 			<a class="button" href="/"><p>Главная</p></a>
 			<a class="button" href="/livetv"><p>Прямой эфир</p></a>
+			<a class="button" href="/reklama"><p>Реклама</p></a>
 			<a class="button" href="/history"><p>Вакансии</p></a>
 			<a class="button" href="/rabota"><p>Стать частью команды</p></a>
 			<script>/* Когда пользователь нажимает на кнопку,
@@ -186,15 +187,15 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark><br>
-		<mark>Запись вещания:</mark> -->
+		<mark>Интернет-канал сейчас ничего не вещает</mark><br>
+		<mark>Запись вещания:</mark>
 </div>
 <div class="video">
 	<iframe width="720" height="405" src="https://rutube.ru/play/embed/d03c50fd33a46d6b4c4956642cd087fa/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </div>
 <div class="title1">
-		<b>Расписание на 13.08.2024</b>
+		<b>Расписание на 14.08.2024</b>
         <p>С 12:00 МСК:</p>
         <p>- Фильм "Чудеса случаются" <mark>НОВОЕ</mark></p>
         <p>- Короткометражный фильм "Страйдер"</p>
