--- a/history.html
+++ b/history.html
@@ -135,6 +135,7 @@ if (cookiecook != "no") {
 			<div id="myDropdown" class="dropdown-content">
 			<a class="button" href="/"><p>Главная</p></a>
 			<a class="button" href="/livetv"><p>Прямой эфир</p></a>
+			<a class="button" href="/reklama"><p>Реклама</p></a>
 			<a class="button" href="/history"><p>Вакансии</p></a>
 			<a class="button" href="/rabota"><p>Стать частью команды</p></a>
 			<script>/* Когда пользователь нажимает на кнопку,
@@ -193,7 +194,7 @@ window.onclick = function(event) {
     PR-менеджер<br>
     Графический дизайнер</p>
 </div>
-<div class="otdelnoe"><p>Всё это актуальные вакансии. Подать заявку, нажав на кнопку ниже:</p></div>
+<div class="otdelnoe"><p>Всё это - актуальные вакансии. Подать заявку, нажав на кнопку ниже:</p></div>
 <div class="rabota">
 <a class="rabota" href="/rabota"><p>Стать частью команды</p></a>
 </div>
