--- a/rabota-roblox.html
+++ b/rabota-roblox.html
@@ -135,6 +135,7 @@ if (cookiecook != "no") {
 			<div id="myDropdown" class="dropdown-content">
 			<a class="button" href="/"><p>Главная</p></a>
 			<a class="button" href="/livetv"><p>Прямой эфир</p></a>
+			<a class="button" href="/reklama"><p>Реклама</p></a>
 			<a class="button" href="/history"><p>Вакансии</p></a>
 			<a class="button" href="/rabota"><p>Стать частью команды</p></a>
 			<script>/* Когда пользователь нажимает на кнопку,
