--- a/clips.html
+++ b/clips.html
@@ -208,26 +208,31 @@ window.onclick = function(event) {
 </div>
 <div class="vid1">
     <img src="/theme/images/3место.png">
-    <iframe width="325" height="646" src="https://rutube.ru/play/embed/7e127d694b14250ef6675cbbe0749076?p=vZbSUctpYnaPOFgsWyhVrg&skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-    <p>Видео от "Lock1"</p>
+    <iframe width="325" height="646" src="https://rutube.ru/play/embed/d576d2a3765c1431f1684697e6e594e8?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p>Видео от Иван Борискин</p>
     <p>Категория: Города и сёла России</p>
 </div>
 <div class="vid">
     <img src="/theme/images/Остальные.png">
+    <iframe width="325" height="646" src="https://rutube.ru/play/embed/7e127d694b14250ef6675cbbe0749076?p=vZbSUctpYnaPOFgsWyhVrg&skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    <p>Видео от "Lock1"</p>
+    <p>Категория: Города и сёла России</p>
+</div>
+<div class="vid1">
     <iframe width="325" height="646" src="https://rutube.ru/play/embed/fbf5f3f7980952cb8f12d1c23f925498?p=BcpkuDSQkEYA4shvh3LN0g&skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
     <p>Видео от интернет-телеканала "Райка and Лайка"</p>
 </div>
-<div class="vid1">
+<div class="vid">
     <iframe width="325" height="646" src="https://rutube.ru/play/embed/b85b324e92cfbf0808d6ba9f1330043e?p=wStBRWY51s-1ZKUxF2Y9Mw&skinColor=5e35b1" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
     <p>Видео от "Lock1"</p>
     <p>Категория: Другое</p>
 </div>
-<div class="vid">
+<div class="vid1">
     <iframe width="325" height="646" src="https://rutube.ru/play/embed/c25a77d6b07ad72c7fd7e55e6cc35689?p=B3zvI86MA8ZwQv3ZBhEwbg&skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
     <p>Видео от "KERVILL"</p>
     <p>Категория: Игра «Метро Москвы Некрасовка»</p>
 </div>
-<div class="vid1">
+<div class="vid">
     <iframe width="325" height="646" src="https://rutube.ru/play/embed/b2cbc50b4d848fc5aafa08db943152df?p=Do4q-q4eVMqHeUJuAPBqpw&skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
     <p>Видео от "Петров Арсений"</p>
     <p>Категория: Игра «Метро Москвы Некрасовка»</p>
