--- a/clips.html
+++ b/clips.html
@@ -249,7 +249,7 @@ window.onclick = function(event) {
 	<!-- 		<p>Номер карты Юмани:</p>
 			<p>5106 2180 3937 8336</p> -->
 		</div>
-			<iframe class="ya" src="https://yandex.ru/sprav/widget/rating-badge/231632381437?type=rating" width="300" height="50" frameborder="0"></iframe>
+			<iframe class="ya" src="https://yandex.ru/sprav/widget/rating-badge/231632381437?type=rating&theme=dark" width="300" height="50" frameborder="0"></iframe>
 		<div class="title2"><p>Электронная почта редакции: rayka_and_layka-tv@ro.ru</p>
 			<p>По всем вопросам: raika.official@yandex.ru</p>
 		</div>
