--- a/index.html
+++ b/index.html
@@ -187,32 +187,32 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark><br>
-		<mark>Запись вещания:</mark>
+		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark><br>
+		<mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/4893ad4b6ef83aa98e0eed2e7c47e513/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/17057da6016c5587df1273d8d6bc31ad/?skinColor=5e35b1" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </div>
 <div class="title1">
-		<b>Расписание на 14.08.2024</b>
-        <p>С 12:00 МСК:</p>
-        <p>- Фильм "Чудеса случаются" <mark>НОВОЕ</mark></p>
+		<b>Расписание на 20.08.2024</b>
+        <p>С 13:00 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
         <p>- Короткометражный фильм "СДЕЛКА".</p>
         <p>- Велопрогулка по Подмосковью - Люберцы</p>
-        <p>- "Импульс - шаг в будущее" <mark>НОВОЕ</mark></p>
+        <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>14:07 МСК:</p>
+        <p>15:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>14:30 МСК:</p>
+        <p>15:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
         <!-- <p>19:07 МСК:</p>
         <p>Главное к этой минуте</p> -->
-        <p>14:55 МСК:</p>
+        <p>15:55 МСК:</p>
         <p>Продолжение вещания</p>
         <!-- <p>20:35 МСК:</p>
         <p>Итоги недели</p> -->
