--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@ window.onclick = function(event) {
 		<mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/17057da6016c5587df1273d8d6bc31ad/?skinColor=5e35b1" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/6b79a489a97f756157c036d7d2ad9a55/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </div>
 <div class="title1">
-		<b>Расписание на 20.08.2024</b>
-        <p>С 13:00 МСК:</p>
+		<b>Расписание на 23.08.2024</b>
+        <p>С 12:12 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
@@ -206,16 +206,16 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>15:07 МСК:</p>
+        <p>14:20 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>15:30 МСК:</p>
+        <p>14:43 МСК:</p>
         <p>- К/Ф "Карачун"</p>
         <!-- <p>19:07 МСК:</p>
         <p>Главное к этой минуте</p> -->
-        <p>15:55 МСК:</p>
+        <p>15:08 МСК:</p>
         <p>Продолжение вещания</p>
-        <!-- <p>20:35 МСК:</p>
-        <p>Итоги недели</p> -->
+        <p>18:00 МСК:</p>
+        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино <mark>ПРЕМЬЕРА!</mark></p>
 </div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
