--- a/livetv.html
+++ b/livetv.html
@@ -185,14 +185,14 @@ window.onclick = function(event) {
 </div>
 
 <div class='ob'>
-     <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p> -->
+     <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
+     <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p>
      <div class="video">
           <iframe width="720" height="405" src="https://rutube.ru/play/embed/6b79a489a97f756157c036d7d2ad9a55/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 23.08.2024</b>
+        <b>Расписание на 24.08.2024</b>
         <p>С 12:12 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
@@ -212,7 +212,7 @@ window.onclick = function(event) {
         <p>15:08 МСК:</p>
         <p>Продолжение вещания</p>
         <p>18:00 МСК:</p>
-        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино <mark>ПРЕМЬЕРА!</mark></p>
+        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино <mark>НОВОЕ!</mark></p>
      </div>
 </div>
   </div><!-- /.entry-content -->
