--- a/livetv.html
+++ b/livetv.html
@@ -186,14 +186,14 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
-     <mark>Интернет-канал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="720" height="405" src="https://rutube.ru/play/embed/e4f0ba9b7a0b9d5d71ec8e909a54fd3b/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="720" height="405" src="https://rutube.ru/play/embed/a7d1670412d8018f3e21dee9fcdc5037/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 24.08.2024</b>
-        <p>С 12:12 МСК:</p>
+        <b>Расписание на 27.08.2024</b>
+        <p>С 14:12 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
@@ -203,15 +203,15 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>14:20 МСК:</p>
+        <p>16:20 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>14:43 МСК:</p>
+        <p>16:43 МСК:</p>
         <p>- К/Ф "Карачун"</p>
         <!-- <p>19:07 МСК:</p>
         <p>Главное к этой минуте</p> -->
-        <p>15:08 МСК:</p>
+        <p>17:08 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>18:00 МСК:</p>
+        <p>20:00 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино <mark>НОВОЕ!</mark></p>
      </div>
 </div>
