--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@ window.onclick = function(event) {
 </body>
 	<div class="podval">
 		<div class="title2">
-			<p>Реквизиты для финансовой помощи</p>
+			<!-- <p>Реквизиты для финансовой помощи</p>
 			<p>Номер карты МТС Банка:</p>
-			<p>2200 2804 1534 3484</p>
+			<p>2200 2804 1534 3484</p> -->
 	<!-- 		<p>Номер карты Юмани:</p>
 			<p>5106 2180 3937 8336</p> -->
 		</div>
