--- a/livetv.html
+++ b/livetv.html
@@ -186,8 +186,8 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
-     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p> -->
+     <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p>
      <div class="video">
           <iframe width="720" height="405" src="https://rutube.ru/play/embed/a7d1670412d8018f3e21dee9fcdc5037/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
@@ -221,9 +221,7 @@ window.onclick = function(event) {
 </body>
 	<div class="podval">
 		<div class="title2">
-			<!-- <p>Реквизиты для финансовой помощи</p>
-			<p>Номер карты МТС Банка:</p>
-			<p>2200 2804 1534 3484</p> -->
+			<!-- <p>Реквизиты для финансовой помощи</p> -->
 	<!-- 		<p>Номер карты Юмани:</p>
 			<p>5106 2180 3937 8336</p> -->
 		</div>
