--- a/index.html
+++ b/index.html
@@ -187,16 +187,16 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark><br>
-		<mark>Запись вещания:</mark>
+		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark><br>
+		<mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/a7d1670412d8018f3e21dee9fcdc5037/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/ccec02ff9447b2d865b27fdbdcd909f9/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </div>
 <div class="title1">
-		<b>Расписание на 27.08.2024</b>
-        <p>С 14:12 МСК:</p>
+		<b>Расписание на 30.08.2024</b>
+        <p>С 12:12 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
@@ -206,16 +206,16 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>16:20 МСК:</p>
+        <p>14:20 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>16:43 МСК:</p>
+        <p>14:43 МСК:</p>
         <p>- К/Ф "Карачун"</p>
         <!-- <p>19:07 МСК:</p>
         <p>Главное к этой минуте</p> -->
-        <p>17:08 МСК:</p>
+        <p>15:08 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>20:00 МСК:</p>
-        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино <mark>НОВОЕ!</mark></p>
+        <p>18:00 МСК:</p>
+        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
 </div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
