--- a/livetv.html
+++ b/livetv.html
@@ -186,17 +186,35 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
-     <mark>Интернет-канал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="720" height="405" src="https://rutube.ru/play/embed/5a15de0a94e12d1cc065cea8598d260d/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="720" height="405" src="https://rutube.ru/play/embed/9652b8d9fd633c9a1cf7b9d70805adbc/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 05.09.2024</b>
-        <p>С 8:00 МСК:</p>
+        <b>Расписание на 06.09.2024</b>
+        <p>С 9:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
-        <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
+        <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
+        <p>- Короткометражный фильм "СДЕЛКА".</p>
+        <p>- Велопрогулка по Подмосковью - Люберцы</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>11:07 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>11:30 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>11:55 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>14:45 МСК:</p>
+        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>17:00 МСК:</p>
+        <p>Там, где горы встречаются с морем <mark>НОВОЕ</mark></p>
+        <!-- <p>С 8:00 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
         <p>- Короткометражный фильм "СДЕЛКА".</p>
         <p>- Велопрогулка по Подмосковью - Люберцы</p>
@@ -207,12 +225,10 @@ window.onclick = function(event) {
         <p>- К/Ф "ЭГО"</p>
         <p>10:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <!-- <p>19:07 МСК:</p>
-        <p>Главное к этой минуте</p> -->
         <p>10:55 МСК:</p>
         <p>Продолжение вещания</p>
         <p>16:00 МСК:</p>
-        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p> -->
      </div>
 </div>
   </div><!-- /.entry-content -->
