--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@ window.onclick = function(event) {
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>17:00 МСК:</p>
         <p>Там, где горы встречаются с морем <mark>НОВОЕ</mark></p>
+        <p>17:37 МСК:</p>
+        <p>Продолжение вещания</p>
 </div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
