--- a/livetv.html
+++ b/livetv.html
@@ -212,6 +212,8 @@ window.onclick = function(event) {
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>17:00 МСК:</p>
         <p>Там, где горы встречаются с морем <mark>НОВОЕ</mark></p>
+        <p>17:37 МСК:</p>
+        <p>Продолжение вещания</p>
         <!-- <p>С 8:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
