--- a/livetv.html
+++ b/livetv.html
@@ -192,8 +192,8 @@ window.onclick = function(event) {
           <iframe width="720" height="405" src="https://rutube.ru/play/embed/9652b8d9fd633c9a1cf7b9d70805adbc/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 06.09.2024</b>
-        <p>С 9:00 МСК:</p>
+        <b>Расписание на 08.09.2024</b>
+        <p>С 8:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -202,17 +202,17 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>11:07 МСК:</p>
+        <p>10:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:30 МСК:</p>
+        <p>10:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>11:55 МСК:</p>
+        <p>10:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>14:45 МСК:</p>
+        <p>13:45 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:00 МСК:</p>
-        <p>Там, где горы встречаются с морем <mark>НОВОЕ</mark></p>
-        <p>17:37 МСК:</p>
+        <p>18:00 МСК:</p>
+        <p>Реальность полёта <mark>ПРЕМЬЕРА!</mark></p>
+        <p>18:41 МСК:</p>
         <p>Продолжение вещания</p>
         <!-- <p>С 8:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
