--- a/livetv.html
+++ b/livetv.html
@@ -186,14 +186,14 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
-     <mark>Интернет-канал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="720" height="405" src="https://rutube.ru/play/embed/9652b8d9fd633c9a1cf7b9d70805adbc/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="720" height="405" src="https://rutube.ru/play/embed/b3017d87b0d795c2e784dd44c01c8273/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
         <b>Расписание на 08.09.2024</b>
-        <p>С 8:00 МСК:</p>
+        <p>С 8:30 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -202,13 +202,13 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:07 МСК:</p>
+        <p>10:37 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>10:30 МСК:</p>
+        <p>11:00 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>10:55 МСК:</p>
+        <p>11:25 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>13:45 МСК:</p>
+        <p>14:15 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>18:00 МСК:</p>
         <p>Реальность полёта <mark>ПРЕМЬЕРА!</mark></p>
