--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark><br>
-		<mark>Запись вещания:</mark>
+		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark><br>
+		<mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/b3017d87b0d795c2e784dd44c01c8273/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="560" height="315" src="https://nuum.ru/embed/record/3350622" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </div>
 <div class="title1">
@@ -211,7 +211,7 @@ window.onclick = function(event) {
         <p>- К/Ф "Карачун"</p>
         <p>10:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>13:45 МСК:</p>
+        <p>16:05 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>14:00 МСК:</p>
         <p>Продолжение вещания</p>
