--- a/index.html
+++ b/index.html
@@ -187,15 +187,15 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark><br>
-		<mark>Запись вещания:</mark> -->
+		<mark>Интернет-канал сейчас ничего не вещает</mark><br>
+		<mark>Запись вещания:</mark>
 </div>
 <div class="video">
-	<iframe width="560" height="315" src="https://nuum.ru/embed/record/3350622" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/b3017d87b0d795c2e784dd44c01c8273/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </div>
 <div class="title1">
-		<b>Расписание на 09.09.2024</b>
+		<b>Расписание на 10.09.2024</b>
         <p>С 8:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
