--- a/livetv.html
+++ b/livetv.html
@@ -189,7 +189,7 @@ window.onclick = function(event) {
      <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
      <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="720" height="405" src="https://rutube.ru/play/embed/b3017d87b0d795c2e784dd44c01c8273/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="720" height="405" src="https://rutube.ru/play/embed/fcff7c9badf5626549d0f6afb919bb27/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
         <b>Расписание на 10.09.2024</b>
