--- a/index.html
+++ b/index.html
@@ -187,16 +187,16 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark><br>
-		<mark>Запись вещания:</mark> -->
+		<mark>Интернет-канал сейчас ничего не вещает</mark><br>
+		<mark>Запись вещания:</mark>
 </div>
 <div class="video">
 	<iframe width="720" height="405" src="https://rutube.ru/play/embed/fcff7c9badf5626549d0f6afb919bb27/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </div>
 <div class="title1">
-		<b>Расписание на 10.09.2024</b>
-        <p>С 8:00 МСК:</p>
+		<b>Расписание на 11.09.2024</b>
+        <p>С 7:30 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -205,15 +205,15 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:07 МСК:</p>
+        <p>09:37 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>10:30 МСК:</p>
+        <p>10:00 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>10:55 МСК:</p>
+        <p>10:25 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>16:05 МСК:</p>
+        <p>15:35 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>14:00 МСК:</p>
+        <p>15:55 МСК:</p>
         <p>Продолжение вещания</p>
 </div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
