--- a/livetv.html
+++ b/livetv.html
@@ -184,10 +184,10 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
-     <mark>Интернет-канал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="720" height="405" src="https://rutube.ru/play/embed/fcff7c9badf5626549d0f6afb919bb27/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="720" height="405" src="https://rutube.ru/play/embed/48dfbbd9f5d97a68b0e2178d13692ec8/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
         <b>Расписание на 11.09.2024</b>
