--- a/index.html
+++ b/index.html
@@ -195,8 +195,10 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 11.09.2024</b>
-        <p>С 7:30 МСК:</p>
+		<b>Расписание на 12.09.2024</b>
+        <p>8:00 МСК:</p>
+        <p>- Неудачные дули телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>С 8:02 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -205,15 +207,15 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>09:37 МСК:</p>
+        <p>10:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>10:00 МСК:</p>
+        <p>10:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>10:25 МСК:</p>
+        <p>10:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>15:35 МСК:</p>
+        <p>16:05 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>15:55 МСК:</p>
+        <p>14:00 МСК:</p>
         <p>Продолжение вещания</p>
 </div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
