--- a/livetv.html
+++ b/livetv.html
@@ -190,28 +190,10 @@ window.onclick = function(event) {
           <iframe width="720" height="405" src="https://rutube.ru/play/embed/48dfbbd9f5d97a68b0e2178d13692ec8/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 11.09.2024</b>
-        <p>С 7:30 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
-        <p>- Короткометражный фильм "СДЕЛКА".</p>
-        <p>- Велопрогулка по Подмосковью - Люберцы</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>09:37 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>10:00 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>10:25 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>15:35 МСК:</p>
-        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>15:55 МСК:</p>
-        <p>Продолжение вещания</p>
-        <!-- <b>Расписание на 10.09.2024</b>
-        <p>С 8:00 МСК:</p>
+        <b>Расписание на 12.09.2024</b>
+        <p>8:00 МСК:</p>
+        <p>- Неудачные дули телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>С 8:02 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -229,7 +211,7 @@ window.onclick = function(event) {
         <p>16:05 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>14:00 МСК:</p>
-        <p>Продолжение вещания</p> -->
+        <p>Продолжение вещания</p>
         <!-- <p>С 8:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
