--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark><br>
-		<mark>Запись вещания:</mark> -->
+		<mark>Интернет-канал сейчас ничего не вещает</mark><br>
+		<mark>Запись вещания:</mark>
 </div>
 <div class="video">
 	<iframe width="720" height="405" src="https://rutube.ru/play/embed/decbce753adb712e52853d0e952a4966/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
