--- a/livetv.html
+++ b/livetv.html
@@ -190,7 +190,7 @@ window.onclick = function(event) {
           <iframe width="720" height="405" src="https://rutube.ru/play/embed/decbce753adb712e52853d0e952a4966/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 13.09.2024</b>
+        <b>Расписание на 15.09.2024</b>
         <!-- <p>8:00 МСК:</p>
         <p>- Неудачные дули телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>С 8:02 МСК:</p>
@@ -212,7 +212,7 @@ window.onclick = function(event) {
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>14:00 МСК:</p>
         <p>Продолжение вещания</p> -->
-        <p>С 9:00 МСК:</p>
+        <p>С 11:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -221,18 +221,18 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>11:07 МСК:</p>
+        <p>13:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:30 МСК:</p>
+        <p>13:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>11:55 МСК:</p>
+        <p>13:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>14:45 МСК:</p>
+        <p>16:45 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:00 МСК:</p>
+        <p>18:00 МСК:</p>
         <p>Реальность полёта <mark>НОВОЕ!</mark></p>
-        <p>17:40 МСК:</p>
-        <p>Продолжение вещания</p>
+        <p>18:40 МСК:</p>
+        <p>Продолжение вещания</p></div>
         <!-- <p>С 8:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
