--- a/index.html
+++ b/index.html
@@ -187,16 +187,16 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark><br>
-		<mark>Запись вещания:</mark>
+		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark><br>
+		<mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/decbce753adb712e52853d0e952a4966/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/b24e9d6d7b24976fa28ed424343b93d6/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </div>
 <div class="title1">
-		<b>Расписание на 13.09.2024</b>
-        <p>С 9:00 МСК:</p>
+		<b>Расписание на 15.09.2024</b>
+        <p>С 11:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -205,17 +205,17 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>11:07 МСК:</p>
+        <p>13:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:30 МСК:</p>
+        <p>13:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>11:55 МСК:</p>
+        <p>13:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>14:45 МСК:</p>
+        <p>16:45 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:00 МСК:</p>
+        <p>18:00 МСК:</p>
         <p>Реальность полёта <mark>НОВОЕ!</mark></p>
-        <p>17:40 МСК:</p>
+        <p>18:40 МСК:</p>
         <p>Продолжение вещания</p></div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
