--- a/livetv.html
+++ b/livetv.html
@@ -190,8 +190,8 @@ window.onclick = function(event) {
           <iframe width="720" height="405" src="https://rutube.ru/play/embed/decbce753adb712e52853d0e952a4966/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 15.09.2024</b>
-        <!-- <p>8:00 МСК:</p>
+        <b>Расписание на 16.09.2024</b>
+        <p>8:00 МСК:</p>
         <p>- Неудачные дули телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>С 8:02 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
@@ -211,8 +211,8 @@ window.onclick = function(event) {
         <p>16:05 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>14:00 МСК:</p>
-        <p>Продолжение вещания</p> -->
-        <p>С 11:00 МСК:</p>
+        <p>Продолжение вещания</p>
+        <!-- <p>С 11:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -232,7 +232,7 @@ window.onclick = function(event) {
         <p>18:00 МСК:</p>
         <p>Реальность полёта <mark>НОВОЕ!</mark></p>
         <p>18:40 МСК:</p>
-        <p>Продолжение вещания</p></div>
+        <p>Продолжение вещания</p></div> -->
         <!-- <p>С 8:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
