--- a/index.html
+++ b/index.html
@@ -187,16 +187,18 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark><br>
-		<mark>Запись вещания:</mark> -->
+		<mark>Интернет-канал сейчас ничего не вещает</mark><br>
+		<mark>Запись вещания:</mark>
 </div>
 <div class="video">
 	<iframe width="720" height="405" src="https://rutube.ru/play/embed/b24e9d6d7b24976fa28ed424343b93d6/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </div>
 <div class="title1">
-		<b>Расписание на 15.09.2024</b>
-        <p>С 11:00 МСК:</p>
+		<b>Расписание на 16.09.2024</b>
+        <p>8:00 МСК:</p>
+        <p>- Неудачные дули телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>С 8:02 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -205,18 +207,16 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:07 МСК:</p>
+        <p>10:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>13:30 МСК:</p>
+        <p>10:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>13:55 МСК:</p>
+        <p>10:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>16:45 МСК:</p>
+        <p>16:05 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>18:00 МСК:</p>
-        <p>Реальность полёта <mark>НОВОЕ!</mark></p>
-        <p>18:40 МСК:</p>
-        <p>Продолжение вещания</p></div>
+        <p>14:00 МСК:</p>
+        <p>Продолжение вещания</p>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
 	<!-- <iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1717604674945027" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe> -->
