--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ window.onclick = function(event) {
 		<mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/657518b4e4db1572622141c0c118a4ee/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="560" height="315" src="https://nuum.ru/embed/record/3412163" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </div>
 <div class="title1">
