--- a/index.html
+++ b/index.html
@@ -187,16 +187,16 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark><br>
-		<mark>Запись вещания:</mark> -->
+		<mark>Интернет-канал сейчас ничего не вещает</mark><br>
+		<mark>Запись вещания:</mark>
 </div>
 <div class="video">
 	<iframe width="720" height="405" src="https://rutube.ru/play/embed/023ed572c25800cc0b564b7a264ae806/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </div>
 <div class="title1">
-		<b>Расписание на 17.09.2024</b>
-        <p>8:00 МСК:</p>
+		<b>Расписание на 18.09.2024</b>
+        <!-- <p>8:00 МСК:</p>
         <p>- Неудачные дули телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>С 8:02 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
@@ -215,7 +215,28 @@ window.onclick = function(event) {
         <p>Продолжение вещания</p>
         <p>16:05 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>14:00 МСК:</p>
+        <p>16:30 МСК:</p>
+        <p>Продолжение вещания</p> -->
+        <p>7:30 МСК:</p>
+        <p>- Неудачные дули телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>С 7:32 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
+        <p>- Короткометражный фильм "СДЕЛКА".</p>
+        <p>- Велопрогулка по Подмосковью - Люберцы</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>9:37 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>10:00 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>10:25 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>15:35 МСК:</p>
+        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>15:55 МСК:</p>
         <p>Продолжение вещания</p>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
