--- a/history.html
+++ b/history.html
@@ -184,7 +184,7 @@ window.onclick = function(event) {
 
 <div class='ob'>
     <h1 class='hhh'>История интернет-телеканала:<h1>
-    <p>Дата основания была официально припредставлена 23.10.2022</p>
+    <p>Дата основания была официально представлена 23.10.2022</p>
     <br>
     <h1 class='hhh'>Вакансии:<h1>
     <p>В состав команды интернет-канала "Райка and Лайка" входят следующие вакансии:<br>
