--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ window.onclick = function(event) {
 <div class="title1">
 		<b>Расписание на 18.09.2024</b>
         <!-- <p>8:00 МСК:</p>
-        <p>- Неудачные дули телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>С 8:02 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
@@ -218,7 +218,7 @@ window.onclick = function(event) {
         <p>16:30 МСК:</p>
         <p>Продолжение вещания</p> -->
         <p>7:30 МСК:</p>
-        <p>- Неудачные дули телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>С 7:32 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
