--- a/livetv.html
+++ b/livetv.html
@@ -192,7 +192,7 @@ window.onclick = function(event) {
      <div class="title1">
         <b>Расписание на 18.09.2024</b>
         <p>7:30 МСК:</p>
-        <p>- Неудачные дули телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>С 7:32 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
